--- a/app/views/functions/index.html.slim
+++ b/app/views/functions/index.html.slim
@@ -1,9 +1,6 @@
 h1 Functions
 
-- if @lambda_response.successful?
-  ul
-    - @functions.each do |function|
-      li
-        = function.function_name
-- else
-  p = @lambda_responce.error
+ul
+  - @lambda_functions.each do |lambda_function|
+    li
+      = lambda_function.function_name
